# db_scripter

./: .gitignore  README.md  bigworddictionary.txt  dictionary.txt  pyproject.toml  readme.txt
src/db_scripter/: adaptor.py  adaptor_factory.py  adventureworks.json  common.py  config.py  database_objects.py  main.py  mssql_adaptor.py  mssql_ddl_parser.py  mysql_adaptor.py  options.py  pgsql_adaptor.py  query_parser.py  sqlite_adaptor.py
tests/: common.py  test_db.py  test_dependency.py  test_general.py
