[build-system]
requires = ["pip>=22.3.1",
    "setuptools>=66.0.0",
    "wheel>=0.38.4"]

build-backend = "setuptools.build_meta"

[project]
dependencies = [

]
name = "db_scripter"
readme = "README.md"
version = "0.0.1"
authors = [
    { name = "Stephen Booth", email = "stephen.booth.za@gmail.com" },
]
description = "A database scripter and diff"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

